# soccer-video-analytics

./: .gitignore  README.md  pyproject.toml  run.py  run_utils.py
inference/: colors.py  filters.py  yolov5.py
notebooks/: train_ball_detecting_model.ipynb  train_player_detecting_model.ipynb
soccer/: draw.py
