[tool.poetry]
name = "Soccer Video Analytics"
version = "0.1.0"
description = ""
authors = [
  "Diego Marvid <dmarvid@tryolabs.com>",
  "Diego Fernandez <dfernandez@tryolabs.com>"
]

[tool.poetry.dependencies]
python           = "^3.9"
norfair          = { git = "https://github.com/tryolabs/norfair.git", rev = "master" }
torch            = "^2.1.0"
torchvision      = "^0.16.0"
opencv-python    = "^4.6.0.66"
numpy            = "^1.23.4"
Pillow           = "^11.3.0"
matplotlib       = "^3.6.1"
pandas           = "^1.5.0"
PyYAML           = "^6.0"
tqdm             = "^4.64.1"
seaborn          = "^0.12.0"
ipython          = "^8.5.0"
ultralytics      = "^8.3.172"
triton           = "^2.2.0"
[tool.poetry.group.dev.dependencies]

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
